--- a/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
+++ b/src/app/common/components/modals/ContactUsModal/ContactUsModal.styles.scss
@@ -1,7 +1,30 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/mixins/_utils.mixins.scss" as mut;
+@use "@assets/sass/_utils.functions.scss" as f;
 
-.headerItem{
+.contactUsModal {
+    &.ant-modal {
+        .ant-modal-content {
+            @include mut.full-rounded(20px, $overflow: visible);
+            padding: f.pxToRem(24px) f.pxToRem(40px);
+            box-shadow: 0 7px 11px 2px rgba(0, 0, 0, 0.25);
+        }
+        .ant-modal-close {
+            @include mut.positioned-as(absolute, $left: 94%, $top: -25px);
+            @include mut.circular(80px, c.$pure-white-color);
+    
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            .ant-modal-close-x{
+              font-size: 24px;
+            }
+            &:hover {
+              background-color: c.$modal-hover-color;
+            }
+          }
+    }
+}
+
+.headerItem {
     background-color: transparent;
     border: none;
     text-align: left;
@@ -9,7 +32,7 @@
     text-decoration: none;
 }
 
-.headerItem:hover {    
+.headerItem:hover {
     cursor: pointer;
     color: c.$dark-red-color;
 }
