add logic for dnd & logic for adding a new slide from template and clearing template

--- a/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
+++ b/src/app/common/components/ArtGallery/ArtGalleryBlock.styles.scss
@@ -28,6 +28,11 @@
         width: pxToRem(1230px);
     }
 }
+
+.configurationGalleryControls{
+    @include mut.flex-center();
+}
+
 @media screen and (max-width:1450px) {
     .artGalleryWrapper {
         .artGalleryContainer {
