add possibility to navigate by clicking on facts

--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -40,6 +40,11 @@
 
 .slick-center .interestingFactSlide {
     transform: scale(1.52);
+    cursor: default !important;
+}
+
+.slick-list .interestingFactSlide {
+    cursor: pointer;
 }
 
 .singleSlideContainer{
