fix not changing text in description input when you change vacancy fix bugs with description input length add styles for description

--- a/src/features/AdminPage/JobsPage/JobsModal/JobsModal.styles.scss
+++ b/src/features/AdminPage/JobsPage/JobsModal/JobsModal.styles.scss
@@ -1,5 +1,9 @@
 @use "@sass/_utils.functions.scss" as f;
 
+.validateLabelDescription{
+    color: red;
+    font-weight: bold;
+}
 .textWrapper{
     .ant-input{
         min-height: f.pxToRem(300px);
