show correct wow-fact and timelineItem on the page

--- a/src/app/layout/header/HeaderSkeleton/HeaderSkeleton.styles.scss
+++ b/src/app/layout/header/HeaderSkeleton/HeaderSkeleton.styles.scss
@@ -3,7 +3,8 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 
 .headerPopupSkeleton {
-  width: auto;
+  width: f.pxToRem(915px);
+  //width: auto;
   @include mut.flexed($justify-content: flex-start);
   transition: all 1s;
   overflow-x: auto;
