add scroll to the search results block on mobile

--- a/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
+++ b/src/app/layout/header/SearchBlock/SearchBlock.styles.scss
@@ -13,7 +13,7 @@
 @media screen and (max-width: 1024px) {
     .searchResultsBlock{ 
         width: 100vw;
-        overflow-y: hidden;
+        overflow-y: scroll;
         
     }
 
