--- a/src/app/common/components/modals/HeaderLogin/HeaderLoginModal.styles.scss
+++ b/src/app/common/components/modals/HeaderLogin/HeaderLoginModal.styles.scss
@@ -4,7 +4,7 @@
 
 .loginModal {
   @include mut.sized(574px, 479px);
-
+  
   &.ant-modal {
     .ant-modal-content {
       height: inherit;
@@ -40,7 +40,22 @@
     @include mut.full-rounded(14px);
     background-color: c.$accented-red-color;
     border: none;
+    position: relative;
 
+    &.ant-btn {
+      padding: 0 !important;
+    }
+
+    .linkInsideButton {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      text-decoration: none;
+    }
+    
     > * {
       @include mut.with-font($font-weight: 500);
       color: c.$pure-white-color;
