--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -164,14 +164,14 @@
         }
 
         &:last-child {
-          @include mut.with-font(ft.$roboto-font, $font-size: 15px, $font-weight: 300);
+          @include mut.with-font(ft.$roboto-font, $font-size: 15px, $font-weight: 500);
 
           font-style: normal;
-          line-height: f.pxToRem(18px);
-          padding-inline-start: f.pxToRem(16px);
+          line-height: f.pxToRem(12px);
           padding-top: f.pxToRem(2px);
           height: f.pxToRem(15px);
           text-align: left;
+          color: c.$checkbox-light-grey;
         }
       }
     }
@@ -179,6 +179,36 @@
     > * {
       @include mut.full-rounded(11px);
       @include mut.with-font($font-weight: 300);
+    }
+    .ant-checkbox {
+      @include mut.sized(25px, 25px);
+    }
+
+    .ant-checkbox-inner {
+      @include mut.sizedImportant(25px, 25px);
+
+      border: 3px solid c.$normal-darker-gray-color;
+      border-radius: 0  !important;
+      overflow: visible;
+    }
+
+    .ant-checkbox-checked {
+      .ant-checkbox-inner {
+        border: 3px solid c.$accented-red-color;
+      }
+    }
+
+    .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner::after {
+      opacity: 0;
+    }
+
+    .ant-checkbox-checked:after {
+      border-color: none !important;
+    }
+
+    .ant-checkbox-wrapper .ant-checkbox-checked .ant-checkbox-inner {
+      background: c.$accented-red-color;
+      box-shadow: inset 0 0 0 2px c.$pure-white-color;
     }
   }
 
