--- a/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
+++ b/src/features/AdditionalPages/PartnersPage/Partners.styles.scss
@@ -23,7 +23,7 @@
     }
 
     .subTitle{
-        @include mut.with-font($font-family: ft.$closer-text-font, $font-weight: 500, $font-size: 20px);
+        @include mut.with-font($font-family: ft.$roboto-font, $font-weight: 500, $font-size: 20px);
         line-height: 26px;
         color:  c.$lighter-black-color; 
     }
