added blur to the top of the teaser block on streetcode page

--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -2,6 +2,22 @@
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/_utils.functions.scss" as f;
+
+@mixin blur($edge:0, $top:0, $height:0) {
+  position: relative;
+  &:after {
+    content: '';
+    position: absolute;
+    top: $top;
+    left: 0;
+    right: 0;
+    height: f.pxToRem($height);
+    background: linear-gradient($edge, rgba(255,255,255,0.01) 0%, rgba(255,255,255,0.25) 5%, rgba(255, 255, 255, 0.664) 21%);
+    -webkit-text-fill-color: transparent;
+    z-index: 1;
+  }
+}
+
 .card {
   display: flex;
   flex-direction: row;
@@ -65,10 +81,16 @@
 .tagContainer{
   @include mut.rem-margined(13px, 0, 13px, 0);
 }
+.blurTop{
+  @include blur($edge: 0deg, $top: 9px, $height: 16px);
+}
+.blurBottom{
+  @include blur($edge: 180deg, $top: -20px, $height: 21px);
+}
 .teaserBlock {
-  padding-bottom: f.pxToRem(20px);
   @include mut.with-font($font-weight: 300, $font-size: 20px);
-  @include mut.rem-margined(25px, 0px, 0px, 0px);
+  @include mut.rem-margined($top: 10px);
+  @include mut.rem-padded($top: 15px, $bottom: 15px);
   line-height: 23px;
   overflow: auto;
   flex-grow: 1;
@@ -90,17 +112,6 @@
     border-width: 3px;
     border-color: c.$accented-red-color;
   }
-  &:before {
-    content: '';
-    position: absolute;
-    top: -25px;
-    left: 0;
-    right: 0;
-    height: f.pxToRem(25px);
-    background: linear-gradient(180deg, rgba(255,255,255,0.01) 0%, rgba(255,255,255,0.25) 5%, rgba(255,255,255,0.75) 21%);
-    -webkit-text-fill-color: transparent;
-  }
-
 }
 .audioBtnActive {
   background-color: c.$accented-red-color;
@@ -170,10 +181,14 @@
 @media screen and (max-width: 1024px) {
   .blockCentering {
     @include mut.rem-padded($top: 2px, $right: 10px, $bottom: 0px, $left: 10px);
+    .blurTop{
+      @include blur($edge: 0deg, $top: 4px, $height: 11px);
+    }
     .teaserBlock {
       line-height: f.pxToRem(18.75px);
       font-size: f.pxToRem(16px);
-      @include mut.rem-margined(15px, 0px, 0px, 0px);
+      @include mut.rem-margined($top: 5px);
+      @include mut.rem-padded($top: 10px, $bottom: 15px);
       @include mut.with-font($font-weight: 300, $font-size: 16px);
     }
     .card {
@@ -258,9 +273,6 @@
       .cardFooter{
         margin-top: f.pxToRem(39px) !important;
         @include mut.rem-padded(0px, 0px, 0px, 0px);
-        &:before {
-          top: -64px;
-        }
         .audioBtn{
           width: 100%;
         }
