--- a/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
+++ b/src/features/MainPage/NewsSlider/NewsSliderItem/NewsSliderItem.styles.scss
@@ -14,6 +14,7 @@
         @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
         @include mut.sized(840px, 567px);
         @include mut.full-rounded(30px);
+        cursor: pointer;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         background-color: c.$pure-white-color;
         margin-left: 20px;
