--- a/src/features/MainPage/PartnersBlockMain/PartnersBlockMain.styles.scss
+++ b/src/features/MainPage/PartnersBlockMain/PartnersBlockMain.styles.scss
@@ -13,7 +13,7 @@
             row-gap: 0;
 
             .partnersItem {
-                @include mut.rem-margined($top: 87px, $right: 10px, $bottom: 30px, $left: 10px);
+                @include mut.rem-margined($top: 53px, $right: 10px, $bottom: 30px, $left: 10px);
                 @media screen and (max-width: 768px) {
                     @include mut.rem-margined($top: 50px, $right: 10px, $bottom: 30px, $left: 10px);
                 }
@@ -29,13 +29,14 @@
     }
 
     .keyPartnersBlock {
-        margin: 0;
+        @include mut.rem-margined($top: 25px, $bottom: 80px);
     }
 }
 
 @media screen and (max-width: 1200px) {
     .partnersBlock {
         .keyPartnersBlock {
+            @include mut.rem-margined($top: 0px, $bottom: 30px);
             .partnersItem {
                 @include mut.rem-margined($top: 15px, $right: 10px, $bottom: 10px, $left: 15px);
                 @include mut.sized($width: 350px, $height: 106px);
