Fixed image card displaying for resolution from 381 to 360

--- a/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
+++ b/src/features/StreetcodePage/MainBlock/StreetcodeCard/StreetcodeCard.styles.scss
@@ -273,3 +273,13 @@
     }
   }
 }
+
+@media screen and (max-width: 385px) {
+  .blockCentering {
+    .card {
+      .leftSider {
+        @include mut.sized(98%, 489px);
+      }
+    }
+  }
+}
