forFansSliderFix: fix the slider functionality so that it displays correctly on various screen sizes and with different numbers of cards

--- a/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
+++ b/src/features/StreetcodePage/SourcesBlock/Sources.styles.scss
@@ -31,7 +31,7 @@
     }
 
     .sourcesSliderContainer {
-        @include mut.sizedImportant(1230px, 100%);
+        @include mut.sizedImportant(auto, 100%);
         .slick-arrow {
             display: none;
             visibility: hidden;
