Changed all social media icons + minor fixes

--- a/src/app/layout/footer/Footer.styles.scss
+++ b/src/app/layout/footer/Footer.styles.scss
@@ -70,6 +70,7 @@
     li{
       .ant-typography.text-white{
         color: white;
+        @include mut.with-font($font-weight: 300, $font-size: 15px);
       }
     }
   }
@@ -83,9 +84,6 @@
     > * {
      @include mut.rem-margined($right: 14.62px);
     }
-      li:nth-child(5) {
-        @include mut.sized($height: 20px);
-      }
   }
 }
 @media screen and (max-width: 480px) {
