--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -7,6 +7,13 @@
 $bgImg: '@assets/images/catalog/background.webp';
 $loadImg: '@assets/images/catalog/loading.webp';
 
+.streetcodeCatalogCaption {
+    @include mut.with-font($font-family: f.$roboto-font, $font-weight: 300, $font-size: 12px);
+    line-height: 14px;
+    text-transform: uppercase;
+    color: #891F16;
+}
+
 .catalogPage{
     width: 100%;
     background: url($bgImg) no-repeat center / 100%;
@@ -19,6 +26,16 @@ $loadImg: '@assets/images/catalog/loading.webp';
         margin-top: 5.125rem;
         padding: pxToRem(10px) 10% pxToRem(100px) 10%;
         width: 100%;
+
+        .streetcodeHeadingContainer {
+            display: flex;
+            justify-content: space-between;
+            margin-top: pxToRem(20px);
+            .headingFlexItem {
+                display: inline-block;
+            }
+        }
+
         .streetcodeCatalogHeading {
             @include mut.with-font('Closer Text', 500, 96px, normal);
             padding-bottom: pxToRem(40px);
@@ -57,7 +74,17 @@ $loadImg: '@assets/images/catalog/loading.webp';
         .streetcodeCatalogWrapper {
             padding: pxToRem(80px) pxToRem(13px) 0;
             margin-top: 0;
-    
+            width: 100%;
+
+            .streetcodeHeadingContainer {
+                display: flex;
+                justify-content: space-between;
+                margin-top: pxToRem(20px);
+                .headingFlexItem {
+                    display: inline-block;
+                }
+            }
+
             .streetcodeCatalogHeading {
                 padding-bottom: 0;
                 font-size: 54px;
