--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
@@ -3,14 +3,33 @@
 
 .OneToFourAndFiveAndSixSlide{
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr); 
+    gap: 30px 30px; 
+    grid-template-areas: 
+    "img1 img2"
+    "img1 img3"; 
     max-height: 100%;
     gap: pxToRem(30px);    
 
+    img{
+        grid-area: img1; 
+        width: 790px; 
+        height: 100%; 
+        max-height: 100%;
+    }
 
     img{
-        height: 100%;
-        width: 100%;
+        grid-area: img2; 
+        width: 390px; 
+        height: 253px;
+        max-height: 100%;
+    }
+
+    img{
+        grid-area: img3; 
+        width: 390px; 
+        height: 253px;
         max-height: 100%;
     }
 }
