--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
@@ -1,34 +1,33 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
 
-.OneToFourAndFiveAndSixSlide{
+.OneToFourAndFiveAndSixSlide {
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr); 
-    gap: 30px 30px; 
-    grid-template-areas: 
-    "img1 img2"
-    "img1 img3"; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: pxToRem(30px);
+    grid-template-areas:
+        "img1 img2"
+        "img1 img3";
     max-height: 100%;
-    gap: pxToRem(30px);    
 
-    img{
-        grid-area: img1; 
-        width: 790px; 
-        height: 100%; 
+   base-art-image.img1{
+        grid-area: img1;
+        width: pxToRem(790px);
+        height: 100%;
         max-height: 100%;
     }
 
     img{
-        grid-area: img2; 
-        width: 390px; 
+        grid-area: img2;
+        width: pxToRem(380px);
         height: 253px;
         max-height: 100%;
     }
 
     img{
-        grid-area: img3; 
-        width: 390px; 
+        grid-area: img3;
+        width: pxToRem(380px);
         height: 253px;
         max-height: 100%;
     }
