--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveAndSixSlide/OneToFourAndFiveAndSixSlide.styles.scss
@@ -6,29 +6,37 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: pxToRem(30px);
-    grid-template-areas:
-        "img1 img2"
-        "img1 img3";
+    // grid-template-areas:
+    //     "img1 img2"
+    //     "img1 img3";
     max-height: 100%;
 
-   base-art-image.img1{
-        grid-area: img1;
-        width: pxToRem(790px);
-        height: 100%;
-        max-height: 100%;
-    }
+    img {
+        &.base-art-image {
+            grid-template-areas:
+                "img1 img2"
+                "img1 img3";
 
-    img{
-        grid-area: img2;
-        width: pxToRem(380px);
-        height: 253px;
-        max-height: 100%;
-    }
+            &.img1 {
+                grid-area: img1;
+                width: pxToRem(790px);
+                height: 100%;
+                max-height: 100%;
+            }
 
-    img{
-        grid-area: img3;
-        width: pxToRem(380px);
-        height: 253px;
-        max-height: 100%;
+            &.img2 {
+                grid-area: img2;
+                width: pxToRem(380px);
+                height: pxToRem(253px);
+                max-height: 100%;
+            }
+
+            &.img3 {
+                grid-area: img3;
+                width: pxToRem(380px);
+                height: pxToRem(253px);
+                max-height: 100%;
+            }
+        }
     }
 }
