Minor fix of donates, still needs fixing

--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -98,6 +98,10 @@
     &:focus {
       outline: none;
     }
+
+    &::placeholder {
+      color: c.$darkish-gray-color;
+    }
   }
 
   .GryvnaSymbol{
