--- a/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
+++ b/src/features/AdditionalPages/SupportUsPage/components/DonationBlock.styles.scss
@@ -61,6 +61,10 @@
     &:focus {
       outline: none;
     }
+
+    &::placeholder {
+      color: c.$darkish-gray-color;
+    }
   }
 
   .GryvnaSymbol{
