--- a/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
@@ -1,18 +1,25 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
 
-.base-art{
+.base-art-slide{
     position: relative;
+    overflow: hidden;
+    padding: pxToRem(30px);
 
-    &-slide{
-        height: pxToRem(536px);
-        width: pxToRem(1200px);
-    }
+    height: pxToRem(536px);
+    width: pxToRem(1200px);
 
-    &-image{
-        border-radius: 50px;
-        object-fit: cover;
-    }
+    max-height: 100%;
+    max-width: 100%;
+
+    gap: pxToRem(30px);
+}
+
+.base-art-image{
+    border-radius: 50px;
+    object-fit: cover;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .admin-options-btn {
