--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
@@ -3,11 +3,32 @@
 
 .OneAndTwoAndThreeAndFourSlide{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
+    grid-template-columns: pxToRem(380px) pxToRem(380px);
+    grid-template-rows: repeat(2, pxToRem(253px));
+    grid-template-areas:
+            "img1 img3"
+            "img2 img4";
+
+    .img1, .droppable1 {
+        grid-area: img1;
+    }
+
+    .img2, .droppable2 {
+        grid-area: img2;
+    }
+
+    .img3, .droppable3 {
+        grid-area: img3;
+    }
+
+    .img4, .droppable4 {
+        grid-area: img4;
+    }
 
     img{
-        height: pxToRem(256px); // (height - row gap) / 2 rows
+        height: 100%;
         width: 100%;
+        max-height: 100%;
     }
 }
