--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFourAndFive/OneAndTwoAndThreeToFourAndFiveSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFourAndFive/OneAndTwoAndThreeToFourAndFiveSlide.styles.scss
@@ -2,10 +2,33 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneAndTwoAndThreeToFourAndFiveSlide{
-    @include mut.flex-center();
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, pxToRem(253px));
+    grid-template-areas:
+            "img1 img3 img4"
+            "img2 img3 .";
+
+    .img1, .droppable1 {
+        grid-area: img1;
+    }
+
+    .img2, .droppable2 {
+        grid-area: img2;
+    }
+
+    .img3, .droppable3 {
+        grid-area: img3;
+    }
+
+    .img4, .droppable4 {
+        grid-area: img4;
+    }
 
     img{
         height: 100%;
-        width: 30%;
+        width: 100%;
+        max-height: 100%;
     }
 }
