--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFiveToSixSlide/OneToTwoAndThreeToFourAndFiveToSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFiveToSixSlide/OneToTwoAndThreeToFourAndFiveToSixSlide.styles.scss
@@ -2,10 +2,16 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneToTwoAndThreeToFourAndFiveToSixSlide{
-    @include mut.flex-center();
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: pxToRem(536px); 
+    max-height: 100%;
+    grid-column-gap: pxToRem(30px);
+    justify-content: center;
 
     img{
         height: 100%;
-        width: 30%;
+        width: 100%;
+        max-height: 100%;
     }
 }
