--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
@@ -4,7 +4,7 @@
 .OneToTwoAndThreeToFourSlide{
     display: grid;
     grid-template-columns: pxToRem(380px) pxToRem(380px); 
-    grid-template-rows: 536px; 
+    grid-template-rows: pxToRem(536px); 
     max-height: 100%;
     grid-column-gap: pxToRem(30px);
     justify-content: center;
