--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -14,6 +14,14 @@ $loadImg: '@assets/images/catalog/loading.webp';
     color: #891F16;
 }
 
+.streetcodeHeadingContainer {
+    display: flex;
+    justify-content: space-between;
+    .headingFlexItem {
+        display: inline-block;
+    }
+}
+
 .catalogPage{
     width: 100%;
     background: url($bgImg) no-repeat center / 100%;
@@ -28,12 +36,7 @@ $loadImg: '@assets/images/catalog/loading.webp';
         width: 100%;
 
         .streetcodeHeadingContainer {
-            display: flex;
-            justify-content: space-between;
             margin-top: pxToRem(20px);
-            .headingFlexItem {
-                display: inline-block;
-            }
         }
 
         .streetcodeCatalogHeading {
@@ -77,12 +80,7 @@ $loadImg: '@assets/images/catalog/loading.webp';
             width: 100%;
 
             .streetcodeHeadingContainer {
-                display: flex;
-                justify-content: space-between;
-                margin-top: pxToRem(20px);
-                .headingFlexItem {
-                    display: inline-block;
-                }
+                margin-top: pxToRem(4px);
             }
 
             .streetcodeCatalogHeading {
