--- a/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/BaseArtGallerySlide.styles.scss
@@ -18,8 +18,11 @@
 .base-art-image{
     border-radius: 50px;
     object-fit: cover;
+
     max-height: 100%;
     max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .admin-options-btn {
