--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFour/OneAndTwoAndThreeAndFourSlide.styles.scss
@@ -1,34 +1,13 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
+@use '@sass/variables/variables.sizes' as s;
 
 .OneAndTwoAndThreeAndFourSlide{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: pxToRem(380px) pxToRem(380px);
-    grid-template-rows: repeat(2, pxToRem(253px));
+    @include mut.art-slide-grid($rows:2);
+    @include mut.images-grid-area($to:4);
+
+    grid-template-columns: repeat(2, pxToRem(s.$art-gallery-img-size));
     grid-template-areas:
             "img1 img3"
             "img2 img4";
-
-    .img1, .droppable1 {
-        grid-area: img1;
-    }
-
-    .img2, .droppable2 {
-        grid-area: img2;
-    }
-
-    .img3, .droppable3 {
-        grid-area: img3;
-    }
-
-    .img4, .droppable4 {
-        grid-area: img4;
-    }
-
-    img{
-        height: 100%;
-        width: 100%;
-        max-height: 100%;
-    }
 }
