--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFour/OneAndTwoAndThreeToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeToFour/OneAndTwoAndThreeToFourSlide.styles.scss
@@ -2,29 +2,11 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneAndTwoAndThreeToFourSlide{
-    display: grid;
-    justify-content: center;
+    @include mut.art-slide-grid($rows: 2);
+    @include mut.images-grid-area($to:3);
+
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(2, pxToRem(253px));
     grid-template-areas:
             "img1 img3"
             "img2 img3";
-
-    .img1, .droppable1 {
-        grid-area: img1;
-    }
-
-    .img2, .droppable2 {
-        grid-area: img2;
-    }
-
-    .img3, .droppable3 {
-        grid-area: img3;
-    }
-
-    img{
-        height: 100%;
-        width: 100%;
-        max-height: 100%;
-    }
 }
