--- a/src/app/common/components/ArtGallery/components/OneToFourAndFiveToSixSlide/OneToFourAndFiveToSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToFourAndFiveToSixSlide/OneToFourAndFiveToSixSlide.styles.scss
@@ -2,16 +2,6 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneToFourAndFiveToSixSlide{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 2fr 1fr; 
-    grid-template-rows: pxToRem(536px); 
-    max-height: 100%;
-    grid-column-gap: pxToRem(30px);
-
-    img{
-        height: 100%;
-        width: 100%;
-        max-height: 100%;
-    }
+    @include mut.art-slide-grid();
+    grid-template-columns: 2fr 1fr;
 }
