--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFive/OneToTwoAndThreeToFourAndFiveSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourAndFive/OneToTwoAndThreeToFourAndFiveSlide.styles.scss
@@ -2,29 +2,10 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneToTwoAndThreeToFourAndFiveSlide{
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(2, pxToRem(253px));
+    @include mut.art-slide-grid($cols:3, $rows: 2);
+    @include mut.images-grid-area($to:3);
+
     grid-template-areas:
             "img1 img2 img3"
             "img1 img2 .";
-
-    .img1, .droppable1 {
-        grid-area: img1;
-    }
-
-    .img2, .droppable2 {
-        grid-area: img2;
-    }
-
-    .img3, .droppable3 {
-        grid-area: img3;
-    }
-
-    img{
-        height: 100%;
-        width: 100%;
-        max-height: 100%;
-    }
 }
