--- a/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoAndThreeToFourSlide/OneToTwoAndThreeToFourSlide.styles.scss
@@ -1,17 +1,11 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
+@use '@sass/variables/variables.sizes' as s;
 
 .OneToTwoAndThreeToFourSlide{
-    display: grid;
-    grid-template-columns: pxToRem(380px) pxToRem(380px); 
-    grid-template-rows: pxToRem(536px); 
-    max-height: 100%;
-    grid-column-gap: pxToRem(30px);
-    justify-content: center;
+    @include mut.flex-center();
 
     img{
-        height: 100%;
-        width: 100%;
-        max-height: 100%;
+        width: pxToRem(s.$art-gallery-img-size);
     }
 }
