--- a/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneToTwoSlide/OneToTwoSlide.styles.scss
@@ -1,11 +1,11 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as *;
+@use '@sass/variables/variables.sizes' as s;
 
 .oneToTwoSlide{
     @include mut.flex-center();
 
     img{
-        height: 100%;
-        width: pxToRem(380px);
+        width: pxToRem(s.$art-gallery-img-size);
     }
 }
