Different variations of art gallery's template (#943)
* New at Enum

* Add some template

* Some addition

* Add some stile

* Add some style

* Some addition

* some addition

* make example of one slyde grid asymmetric styles

* Styles done for every template

* refactor to remove code duplicates

---------

Co-authored-by: Oleh-Kril <oleh.kril.t@gmail.com>

--- a/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFourAndFiveAndSixSlide/OneAndTwoAndThreeAndFourAndFiveAndSixSlide.styles.scss
+++ b/src/app/common/components/ArtGallery/components/OneAndTwoAndThreeAndFourAndFiveAndSixSlide/OneAndTwoAndThreeAndFourAndFiveAndSixSlide.styles.scss
@@ -2,12 +2,5 @@
 @use "@sass/_utils.functions.scss" as *;
 
 .OneAndTwoAndThreeAndFourAndFiveAndSixSlide{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-
-    img{
-        height: pxToRem(256px); // (height - row gap) / 2 rows
-        width: 100%;
-    }
+    @include mut.art-slide-grid($cols: 3, $rows: 2);
 }
