--- a/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
+++ b/src/features/StreetcodeCatalogPage/StreetcodeCatalog.styles.scss
@@ -11,7 +11,7 @@ $loadImg: '@assets/images/catalog/loading.webp';
     @include mut.with-font($font-family: f.$roboto-font, $font-weight: 300, $font-size: 12px);
     line-height: 14px;
     text-transform: uppercase;
-    color: #891F16;
+    color: c.$dark-red-color;
 }
 
 .streetcodeHeadingContainer {
